<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_attendance"
            android:icon="@drawable/take_attendance"
            android:title="@string/menu_attendance" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/notes"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_sclub"
            android:icon="@drawable/connection"
            android:title="@string/menu_club" />

        <item
            android:id="@+id/nav_sforum"
            android:icon="@drawable/discussion"
            android:title="@string/menu_forum" />
        <item
            android:id="@+id/nav_snotice"
            android:icon="@drawable/news"
            android:title="@string/menu_notice" />





    </group>

    <item android:title="Communicate">
        <menu>

        </menu>
    </item>

</menu>
